[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "torch_ransac3d"
version = "1.0.0"
authors = [
    {name = "Harry Dobbs", email = "harrydobbs87@gmail.com"},
]
description = "A high-performance implementation of 3D RANSAC (Random Sample Consensus) algorithm using PyTorch and CUDA."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    'numpy',
    'torch'
]

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters

[project.scripts]
